--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -2,15 +2,11 @@
 .navbar {
     background-color: #1db954;
     color: #fff;
-    padding: 10px;
+    padding: 20px;
     display: flex;
     align-items: center;
-}
-
-.navbar h2 {
-    font-size: 24px;
-    margin: 0;
-    padding-right: 40px;
+    font-size: 1rem;
+    font-weight: 700;
 }
 
 .navbar ul {
@@ -29,6 +25,7 @@
 }
 
 .logo {
+    width: 200px;
     padding-left: 40px;
-    padding-right: 10px;
+    padding-right: 40px;
 }
