--- a/src/components/Sidebar/index.css
+++ b/src/components/Sidebar/index.css
@@ -1,27 +1,19 @@
 /* Sidebar.css */
 .sidebar {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     background-color: #282828;
-    color: #fff;
-}
-
-.sidebar ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.sidebar li {
-    margin-bottom: 10px;
-    cursor: pointer;
+    color: #b3b3b3;
+    padding: 5px;
+    font-size: 1rem;
+    font-weight: 700;
 }
 
 .list-items {
-    gap: 10px;
+    padding: 12px;
+    gap: 20px;
     display: flex;
     align-items: center;
-    color: white;
-    height: 40px;
+}
+
+.white-search-icon {
+    fill: #b3b3b3;
 }
